[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = ["Gihyuk Kwon <imrlgur81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
